--- a/src/docs/demos/xtend/scroll-11.css
+++ b/src/docs/demos/xtend/scroll-11.css
@@ -360,22 +360,20 @@ a:not(.button) {
   transition: margin-bottom 0.3s cubic-bezier(0.63, 0.36, 0, 0.97);
   will-change: margin-bottom; }
 
-/*
-.collapse-height {
+.a-horizontal {
   opacity: 0;
   transform: translateX(-0.618rem);
-  transition: all 300ms cubic-bezier(.63,.36,0,.97);
-  &.fadein {
-    opacity: 1;
-    transform: translateX(0);
-    transition: all 300ms cubic-bezier(.63,.36,0,.97);
-  }
-  &.fadeout {
-    opacity: 0;
-    transform: translateX(0.618rem);
-  }
-}
-*/
+  transition: all 300ms cubic-bezier(0.63, 0.36, 0, 0.97); }
+
+.a-horizontal.fadein {
+  opacity: 1;
+  transform: translateX(0);
+  transition: all 300ms cubic-bezier(0.63, 0.36, 0, 0.97); }
+
+.a-horizontal.fadeout {
+  opacity: 0;
+  transform: translateX(0.618rem); }
+
 .card[data-xt-scroll] .show-scroll {
   display: none; }
 
